# asvab-anypct

./: .gitignore  README.md  asvab_trainer.py  flake.nix  pyproject.toml  vocabwords.json
asvab_trainer/: main.py
src/: asvab_trainer.py
src/asvab_anypct/: __main__.py
