[project]
name = "asvab-anypct"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "cyclopts>=3.1.2",
    "sh>=2.1.0",
    "tqdm>=4.67.1",
]

[tool.scripts]
asvab-anypct = "asvab_anypct.__main__:main"
