[tool.poetry]
name = "asvab-trainer"
version = "0.1.0"
description = "ASVAB vocabulary practice tool"
authors = [
    "bibijeebi <bennyforeman1@gmail.com>",
    "EFJesus <haydensemail@domain.com",
]

[tool.poetry.dependencies]
python = "^3.11"
textual = "^0.52.1"
rich = "^13.7.0"
cyclopts = "^3.1.2"

[tool.poetry.scripts]
asvab-anypct = "asvab_trainer.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
